--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ blinker==1.8.2
 click==8.1.7
 Flask==3.0.3
 Flask-Cors==4.0.1
+gunicorn==22.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 MarkupSafe==2.1.5
 nltk==3.8.1
 numpy==1.26.4
+packaging==24.0
 python-dotenv==1.0.1
 regex==2024.5.10
 scikit-learn==1.3.0
